<resources>
    <string name="app_name">校上行</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="phoneNumber">手机号</string>
    <string name="inputPassword">请填写密码</string>
    <string name="retrievePassword">找回密码</string>
    <string name="newUserRegister">新用户注册</string>
    <string name="cancle">取消</string>
    <string name="back">返回</string>
    <string name="makesure">确认</string>
    <string name="inputyounumber">请输入你的手机号</string>
    <string name="country">国家/地区</string>
    <string name="china">中国</string>
    <string name="phone_head">+86</string>
    <string name="inputnumber">请填写手机号</string>
    <string name="agreen_protocol">轻触上面的"注册"按钮,既表示你同意</string>
    <string name="protocol">《校上行软件许可及服务协议》</string>
    <string name="input_vertify_code">短信验证码已发送,请填写验\n证码</string>
    <string name="vertify_code">验证码</string>
    <string name="please_input_vertify_code">请输入验证码</string>
    <string name="submit">提交</string>
    <string name="recieve_message_time">接受短信大约需要60秒</string>
    <string name="please_set_you_password">请设置你的登录密码</string>
    <string name="please_set_8_16_password">请设置8-16位密码</string>
    <string name="complete_register">完成注册</string>
    <string name="retrieve_by_message">通过短信验证码找回</string>
    <string name="next">下一步</string>
    <string name="set_xsx_password">设置校上行密码</string>
    <string name="complete">完成</string>
    <string name="set_xsx_password_notice">请设置校上行密码,之后你可以使用手机号\n+86+
    校上行密码登录校上行</string>
    <string name="comfirm_code">确认密码</string>
    <string name="re_comfirm_code">请再次确认密码</string>
    <string name="retrieve_by_emain">使用邮箱验证找回</string>
    <string name="retrieve_by_emain2">邮箱验证找回</string>
    <string name="you_have_no_email">你还没有绑定邮箱</string>
    <string name="you_have_no_email_notice">绑定邮箱可以登录校上行,并提升校上行的安全性</string>
    <string name="appeal_by_self">人工申诉</string>
    <string name="sended_email_notice">一封邮件已发送至:@@,\n
    请登录你的邮箱查收邮件并验证</string>
    <string name="retreive_by_appeal">申诉找回密码</string>
    <string name="ture_name">真实姓名</string>
    <string name="please_input_ture_name">请输入你的真实姓名</string>
    <string name="phoneNumber2">手机号码</string>
    <string name="comfirm_phoneNumber">请确保此联系方式能联系到你</string>
    <string name="ID">身份证号</string>
    <string name="ID_notice">请输入此账号实名认证的身份证号</string>
    <string name="the_school">所在学校</string>
    <string name="studentID">学号</string>
    <string name="EC">学历</string>
    <string name="goSchoolTime">入学年份</string>
    <string name="registerTime">注册时间</string>
    <string name="appealNow">立即申诉</string>
    <string name="appealToRetrievePassword">申诉找回密码</string>
    <string name="appeal_ok">申诉完成</string>
    <string name="appeal_ok_notice">你的申请已提交审核,我们会尽快处理,\n
    申诉结果将会通过你的手机号发送给你.\n感谢你的支持</string>
    <string name="select_school">选择学校</string>
    <string name="appeal_open">申请开通</string>
    <string name="thanks_for_support">感谢您对校上行的支持</string>
    <string name="please_input_you_school">请输入你的学校的全称</string>
    <string name="nearby_school">附近学校</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="reply">回复</string>
    <string name="send">发送</string>
    <string name="mystate">我的动态</string>
    <string name="today">今天</string>
    <string name="say_something">说点什么吧...</string>
    <string name="detail">详情</string>
    <string name="delete">删除</string>
    <string name="comment">评论</string>
    <string name="message">消息</string>
    <string name="empty">清空</string>
    <string name="longtext">listView是一种可以显示一系列项目并能进行滚动显示的View。[可爱]在每行里，既可以是简单的文本，也可以是复杂的结构。一般情况下，你都需要保证ListView运行得很好</string>
    <string name="report">投诉</string>
    <string name="report_reason">请选择举报原因</string>
    <string name="report_notice">投诉须知</string>
    <string name="report_notice_content">校上行科技鼓励您对不良内容进行投诉，共同维持校上行APP安全、纯净的校园场景。您应保证您的投诉行为是代表您本人的真实意愿，并且是基于善意的、\n为了保护您与他人合法权益的行为。校上行科技作为中立的平台服务者，收到您的投诉后，会尽快按照相关法律法规的规定独立判断并进行处理，并且会将投诉结果及时通知您。校上行科技将会采取合理的措施保护您的个人信息，除法律法规规定的情形外，未经用户许可校上行科技不会向第三方公开、透露您的个人信息。对于投诉成功的用户，校上行科技将会进行一定的校币奖励；如果用户存在多次恶意投诉的行为\n，校上行科技将酌情采取一定的措施限制部分服务功能。</string>
    <string name="submitted">已提交</string>
    <string name="report_evidence">请举证（留言可选填）</string>
    <string name="report_evidence_content">请详细填写，以确保投诉能够更准确快捷受理</string>
    <string name="report_evidence_picture">图片证据</string>
    <string name="submitted_content1">你的举报已提交审核，我们呢会尽快处理。</string>
    <string name="submitted_content2">感谢你的支持！</string>
    <string name="album">相册</string>
    <string name="photo">选择相册</string>
    <string name="preview">预览</string>
    <string name="no_photo">相册没有图片</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="clear">清空</string>
    <string name="setting">设置</string>
    <string name="newnotice">新消息通知</string>
    <string name="privacy">隐私</string>
    <string name="currency">通用</string>
    <string name="bindmail">绑定邮箱</string>
    <string name="xsxpassword">校上行密码</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于校上行</string>
    <string name="exitlongin">退出登录</string>
    <string name="personalinfo">个人信息</string>
    <string name="headimg">头像</string>
    <string name="name">姓名</string>
    <string name="mycode">我的二维码</string>
    <string name="gender">性别</string>
    <string name="hometown">故乡</string>
    <string name="tag">标签</string>
    <string name="autograph">个性签名</string>
    <string name="certification">实名认证</string>
    <string name="city">省市</string>
    <string name="user_no_camera">未发现您的摄像头，请确认您的设备存在摄像头再使用此功能～</string>
    <string name="takephoto">拍照</string>
    <string name="fromalbum">从相册中选取</string>
    <string name="savetophone">保存到手机</string>
    <string name="pic_not_valid">图片无效，请重试</string>
    <string name="save">保存</string>
    <string name="tag_text">通过标签让别人更好的了解你</string>
    <string name="addtag">添加标签</string>
    <string name="alltags">所有标签（长摁删除）</string>
    <string name="saoyisao">扫一扫上面的二维码，留心校上行中的我</string>
    <string name="introduceOneself">一句话介绍自己</string>
    <string name="namevertify">实名认证</string>
    <string name="vertify_text">为保障本校社交圈内都为本校同学，请登录\n本教务系统进行实名认证。</string>
    <string name="vertify_account">账号</string>
    <string name="vertify_passwd">密码</string>
    <string name="vertify_account1">请填入教务系统账号</string>
    <string name="vertify_passwd1">请填入教务系统密码</string>
    <string name="agree">同意</string>
    <string name="vertify_agreement">《在读大学生验证服务协议》</string>
    <string name="vertifynow">立即验证</string>
    <string name="vertifysucess">验证成功</string>
    <string name="feed">请在这里填写建议，校上行重视每个反馈的声音，我们将不断改进，感谢支持！</string>
    <string name="newnotice_agree">接受新消息通知</string>
    <string name="renewnotice">校友圈更新</string>
    <string name="renewnotice1">通知新消息详情</string>
    <string name="renewnotice2">关闭后，有校友圈更新时，不再出现红点提示。</string>
    <string name="renewnotice3">若关闭，当收到校上行消息时，通知提示将不显示发信人和内容摘要。</string>
    <string name="renewnotice4">消息免打扰</string>
    <string name="sound">声音</string>
    <string name="vibration">振动</string>
    <string name="bindMaibox">绑定邮箱地址</string>
    <string name="edit">编辑</string>
    <string name="bindmailtext1">请输入邮箱地址，你可以用验证过的手机号来找回密码。</string>
    <string name="bindmailtext2">该邮箱还未验证，请登录您的邮箱查收邮件并验证。</string>
    <string name="modifymaibox">修改邮箱地址</string>
    <string name="bindmailtext3">你可以用绑定的邮箱找回校上行密码</string>
    <string name="resendmail">重新发送验证邮件</string>
    <string name="breakmaibox">解除绑定</string>
    <string name="yourmaibox">你的邮箱地址</string>
    <string name="receivemode">听筒模式</string>
    <string name="clearcache">清理缓存</string>
    <string name="chatbackgd">聊天背景</string>
    <string name="clearchats">清空聊天记录</string>
    <string name="blacklist">黑名单</string>
    <string name="privacy1">不让他（她）看我的校友圈</string>
    <string name="privacy2">不看他（她）的校友圈</string>
    <string name="oldboy">校友圈</string>
    <string name="privacy3">允许校友查看十张照片</string>
    <string name="xsx110">校上行1.1.0</string>
    <string name="evaluate">去评价</string>
    <string name="functionintro">功能介绍</string>
    <string name="reportandcomplaint">举报与投诉</string>
    <string name="modifypassword">修改校上行密码</string>
    <string name="modify1">请输入绑定手机号</string>
    <string name="modify2">请设置校上行密码</string>
    <string name="modify3">请再次输入</string>
    <string name="confirmmodify">确认修改</string>
    <string name="choosebackgroud">选择背景图</string>
    <string name="takeonepicture">拍一张</string>
    <string name="choosefromalbum">从手机相册选取</string>
    <string name="usebackground">将聊天背景应用到所有聊天场景</string>
    <string name="choosebackground">选择背景图</string>
    <string name="vertifyfinish">您已完成实名认证</string>
    <string name="realname">真实姓名</string>
    <string name="IDnumber">身份证号</string>
    <string name="school">学校</string>
    <string name="education">学历</string>
    <string name="EnrollmentYear">入学年份</string>
    <string name="VertifyTime">验证时间</string>
    <string name="VertifyAgreement">服务协议</string>
    <string name="VertifyAgreement2">在读大学生验证服务协议</string>
    <string name="VertifyAgreement3">这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容这里是协议内容</string>
    <string name="checkupdate">检查更新</string>
    <string name="nodisturb_text">如果只在夜间开启，则只在22：00—8：00间生效</string>
    <string name="download">下载</string>
    <string name="privacy_text1">把通讯录的某个好友放在这里，选择“公开”这个可见范围\n发照片他（她）将无法看见。</string>
    <string name="privacy_text2">把通讯录的某个好友放在这里，他（她）更新的照片将不会\n在你的校友圈中出现。</string>
    <string name="digits_password">,._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXY!Z@#%$^*()_+-~{}[]\/</string>
    <string name="xiaoshang">校上</string>
    <string name="yujian">遇见</string>
    <string name="wo">我</string>
    <string name="shoolfellowhelp">校友互帮</string>
    <string name="myshoolfellowhelp">我的互帮</string>
    <string name="transmit">转发</string>
    <string name="praise">赞</string>
    <string name="helpdetail">互帮详情</string>
    <string name="webprovide">网页由mp.xiaoshangxing.com提供</string>
    <string name="sharetoxsx">分享到\n校友圈</string>
    <string name="iwant_publish">我要发布</string>
    <string name="ipublished">已发布</string>
    <string name="more">更多...</string>
    <string name="no_published_help">你还没有发布互帮,快去发布你的互帮吧</string>
    <string name="shoolreward">校内悬赏</string>
    <string name="myreward">我的悬赏</string>
    <string name="rewaid_detail">悬赏详情</string>
    <string name="collect">收藏</string>
    <string name="original">原图</string>
    <string name="moreinfo">更多资料</string>
    <string name="moreinfo_text1">这是一行个性签名</string>
    <string name="moreinfo_text2">这是三十个字的个性签名这是三十个字的个性签名这是三十个字的个</string>
    <string name="moreinfo_jihua">他的计划</string>
    <string name="moreinfo_hubang">他的互帮</string>
    <string name="moreinfo_xuanshang">他的悬赏</string>
    <string name="moreinfo_xianzhi">他的闲置</string>
    <string name="setinfo">资料设置</string>
    <string name="StarMarkfriends">设为星标好友</string>
    <string name="crush">暗恋他</string>
    <string name="setinfo_text">此功能三个月只可对你的所有好友使用1次，若对方也在暗恋着你，系统将会对双方发出详细通知；若对方未暗恋你，对方只会收到“有人暗恋你”的信息提示。</string>
    <string name="addtoblacklist">加入黑名单</string>
    <string name="persondata">个人资料</string>
    <string name="sayhello">打个招呼</string>
    <string name="focus">留心</string>
    <string name="dynamic">动态</string>
    <string name="select_person">选择联系人</string>
    <string name="plan_name">计划名称:</string>
    <string name="response">回复</string>
    <string name="serch">搜索</string>
    <string name="no_net">当前网络不可用,请检查你的网络设置</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="chatinfom">聊天详情</string>
    <string name="chatinfo">聊天信息</string>
    <string name="allGroupMember">全部群成员</string>
    <string name="groupChatName">群聊名称</string>
</resources>