<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/w3"
    android:orientation="vertical">
    <!--标题栏-->
    <LinearLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y184"
        android:background="@color/b2"
        android:paddingEnd="@dimen/x24"
        android:paddingStart="@dimen/x24">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--返回-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/left_arrow_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="@dimen/x12"
                    android:text="@string/back"
                    android:textColor="@color/w0"
                    android:textSize="15sp" />
            </LinearLayout>

            <!--申诉找回密码-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/retreive_by_appeal"
                android:textColor="@color/w0"
                android:textSize="17sp" />

        </RelativeLayout>


    </LinearLayout>

    <!--第一块-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y42"
        android:background="@color/w0"
        android:orientation="vertical"
        android:paddingStart="@dimen/x42">

        <!--真实姓名-->
        <LinearLayout style="@style/appeal_item_layput">

            <TextView
                style="@style/appeal_item_name"
                android:text="@string/ture_name" />

            <EditText
                android:id="@+id/name"
                style="@style/appeal_item_content"
                android:hint="@string/please_input_ture_name" />
        </LinearLayout>

        <include layout="@layout/line_horizontal_g1">

        </include>

        <!--手机号码-->
        <LinearLayout style="@style/appeal_item_layput">

            <TextView
                style="@style/appeal_item_name"
                android:text="@string/phoneNumber2" />

            <EditText
                android:id="@+id/phone_number"
                style="@style/appeal_item_content"
                android:hint="@string/comfirm_phoneNumber"
                android:inputType="number" />
        </LinearLayout>

        <include layout="@layout/line_horizontal_g1">

        </include>

        <!--身份证号-->
        <LinearLayout style="@style/appeal_item_layput">

            <TextView
                style="@style/appeal_item_name"
                android:text="@string/ID" />

            <EditText
                android:id="@+id/id"
                style="@style/appeal_item_content"
                android:hint="@string/ID_notice"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

    <!--第二块-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y54"
        android:background="@color/w0"
        android:orientation="vertical"
        android:paddingStart="@dimen/x42">

        <!--所在学校-->
        <LinearLayout style="@style/appeal_item_layput">

            <TextView
                style="@style/appeal_item_name"
                android:text="@string/the_school" />

            <EditText
                android:id="@+id/school"
                style="@style/appeal_item_content" />
        </LinearLayout>

        <include layout="@layout/line_horizontal_g1">

        </include>

        <!--学号-->
        <LinearLayout style="@style/appeal_item_layput">

            <TextView
                style="@style/appeal_item_name"
                android:text="@string/studentID" />

            <EditText
                android:id="@+id/studentID"
                style="@style/appeal_item_content"
                android:inputType="number" />
        </LinearLayout>

        <include layout="@layout/line_horizontal_g1">

        </include>

        <!--学历-->
        <LinearLayout style="@style/appeal_item_layput">

            <TextView
                style="@style/appeal_item_name"
                android:text="@string/EC" />

            <EditText
                android:id="@+id/EC"
                style="@style/appeal_item_content" />
        </LinearLayout>

        <include layout="@layout/line_horizontal_g1">

        </include>

        <!--入学年份-->
        <LinearLayout style="@style/appeal_item_layput">

            <TextView
                style="@style/appeal_item_name"
                android:text="@string/goSchoolTime" />

            <EditText
                android:id="@+id/goSchoolTime"
                style="@style/appeal_item_content"
                android:inputType="date" />
        </LinearLayout>

        <include layout="@layout/line_horizontal_g1">

        </include>

        <!--注册时间-->
        <LinearLayout style="@style/appeal_item_layput">

            <TextView
                style="@style/appeal_item_name"
                android:text="@string/registerTime" />

            <EditText
                android:id="@+id/registerTime"
                style="@style/appeal_item_content"
                android:inputType="date" />
        </LinearLayout>

    </LinearLayout>

    <!--按钮-->
    <Button
        android:id="@+id/btn_appeal"
        style="@style/long_btn"
        android:layout_marginTop="@dimen/y148"
        android:text="@string/appealNow" />

</LinearLayout>