<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--取消-->
    <LinearLayout
        android:id="@+id/cancer_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y124">

        <TextView
            android:id="@+id/cancel"
            style="@style/green1_15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x24"
            android:text="@string/cancle" />
    </LinearLayout>


    <!--请输入你的手机号-->
    <TextView
        android:id="@+id/tv_inputnumber"
        style="@style/black_23sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cancer_layout"
        android:layout_marginTop="@dimen/y48"
        android:gravity="center_horizontal"
        android:text="@string/inputyounumber" />

    <!--手机号输入框-->
    <LinearLayout
        android:id="@+id/ly_inputnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_inputnumber"
        android:layout_marginStart="@dimen/x48"
        android:layout_marginTop="@dimen/y156"
        android:orientation="vertical">

        <!--国家/地区 中国-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/black_16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country" />

            <TextView
                style="@style/black_16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x100"
                android:text="@string/china" />

        </LinearLayout>

        <!--分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/y42"
            android:background="@color/g1">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y144"
            android:orientation="horizontal">

            <!--+86-->
            <TextView
                style="@style/black_16sp"
                android:layout_width="@dimen/x240"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/phone_head" />

            <!--分割线-->
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/g1">

            </View>

            <!--号码输入框-->
            <EditText
                android:id="@+id/et_account"
                style="@style/input_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/inputnumber"
                android:paddingStart="@dimen/x52" />

        </LinearLayout>

        <!--分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/g1">

        </View>

    </LinearLayout>

    <!--注册按钮-->
    <Button
        android:id="@+id/btn_register"
        style="@style/long_btn"
        android:layout_below="@+id/ly_inputnumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y90"
        android:text="@string/register" />

    <!--协议-->
    <LinearLayout
        android:id="@+id/protocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/y66"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/agreen_protocol"
            android:textColor="@color/b2"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/protocol"
            android:textColor="@color/blue1"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>