<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/util_back_left_arrow">

    </include>

    <!--请设置你的登录密码-->
    <TextView
        style="@style/black_23sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y48"
        android:text="@string/retrieve_by_message" />

    <!--输入手机号布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x48"
        android:layout_marginTop="@dimen/y156"
        android:orientation="vertical">

        <!--国家-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y144"
            android:orientation="horizontal">

            <TextView
                style="@style/black_16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/country" />

            <TextView
                style="@style/black_16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/x100"
                android:text="@string/china" />
        </LinearLayout>

        <include layout="@layout/line_horizontal_g1">

        </include>

        <!--国家-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y144"
            android:orientation="horizontal">

            <TextView
                style="@style/black_16sp"
                android:layout_width="@dimen/x240"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/phone_head" />

            <com.xiaoshangxing.utils.customView.ClearableEditTextWithIcon
                android:paddingRight="@dimen/width_48"
                android:id="@+id/et_phoneNumber"
                style="@style/input_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/x100"
                android:hint="@string/inputyounumber" />
        </LinearLayout>

        <include layout="@layout/line_horizontal_g1">

        </include>

    </LinearLayout>

    <!--按钮-->
    <Button
        android:id="@+id/btn_next"
        style="@style/long_btn"
        android:layout_marginTop="@dimen/y90"
        android:text="@string/next" />

</LinearLayout>